--- a/style.css
+++ b/style.css
@@ -716,7 +716,7 @@ h3.authors {
 	width:300px;
 	float:right;
 	margin-bottom:10px;
-	padding:10px;
+	padding:0px 10px 10px 10px;
 	background:#fff;
 	}
 
