Modification des infos du thème

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*  
 Theme Name: Arthemia-fr
-Theme URI: http://michaelhutagalung.com/2008/05/arthemia-magazine-blog-wordpress-theme-released/
-Description: <a href="http://michaelhutagalung.com/2008/05/arthemia-magazine-blog-wordpress-theme-released/">Arthemia-fr</a> combine les styles magazine et blog en un seul thème, en un juste milieu. Conçu pour Wordpress. Support des gravatars et génération autmatique des imagettes. URL du <a href="http://michaelhutagalung.com/2008/05/arthemia-magazine-blog-wordpress-theme-released/">thème original en anglais</a>. 
-Version: 1.0
-Author: Michael Jubel Hutagalung
-Author URI: http://michaelhutagalung.com/2008/05/arthemia-magazine-blog-wordpress-theme-released/
+Theme URI: http://code.google.com/p/arthemia-fr/
+Description: <a href="http://code.google.com/p/arthemia-fr/">Arthemia-fr</a> combine les styles magazine et blog en un seul thème. Conçu pour Wordpress, il intègre le support des gravatars et la génération automatique des imagettes. Il est basé sur le <a href="http://michaelhutagalung.com/2008/05/arthemia-magazine-blog-wordpress-theme-released/">thème Arthemia</a> par <a href="http://michaelhutagalung.com/">Michael Hutagalung</a>. 
+Version: 0.5
+Author: Emmanuel Netter
+Author URI: http://www.cplusn.com/
 
 The CSS, XHTML and design is released under GPL:
 http://www.opensource.org/licenses/gpl-license.php
