--- a/styles/marron.css
+++ b/styles/marron.css
@@ -1,8 +1,8 @@
 /*  
 Theme Name: Arthemia-fr
 Theme URI: http://code.google.com/p/arthemia-fr/
-Description: <a href="http://code.google.com/p/arthemia-fr/">Arthemia-fr</a> combine les styles magazine et blog en un seul thème. Conçu pour Wordpress, il intègre le support des gravatars et la génération automatique des imagettes. Il est basé sur le <a href="http://michaelhutagalung.com/2008/05/arthemia-magazine-blog-wordpress-theme-released/">thème Arthemia</a> par <a href="http://michaelhutagalung.com/">Michael Hutagalung</a> et lui ajoute des fonctions d'administration pour paramétrer le thème. 
-Version: 0.6.0
+Description: <a href="http://code.google.com/p/arthemia-fr/">Arthemia-fr</a> combine les styles magazine et blog en un seul thème. Conçu pour Wordpress, il intègre le support des gravatars et la génération automatique des imagettes. Il est basé sur le <a href="http://michaelhutagalung.com/2008/05/arthemia-magazine-blog-wordpress-theme-released/">thème Arthemia</a> par <a href="http://michaelhutagalung.com/">Michael Hutagalung</a>. 
+Version: 0.5
 Author: Emmanuel Netter
 Author URI: http://www.cplusn.com/
 
@@ -183,7 +183,7 @@ text-decoration: none;
 	}
 
 #page-bar li:hover {
-	background: #7E5B52;
+	background: #905F51;
 	}
 
 
